@@ -2,8 +2,7 @@
 FBSRC=$1/src
 
 h2pas -i -e -o include/dyn_consts.inc $FBSRC/include/dyn_consts.h 
-h2pas -i -e -o include/iberror.inc $FBSRC/include/gen/iberror.h 
-h2pas -i -e -o include/dyn_consts.inc $FBSRC/include/dyn_consts.h
+h2pas -i -e -o include/iberror.inc $FBSRC/include/iberror.h 
 sed 's/(unsigned char) *\([0-9]\)/\1/
 s/(unsigned short) *\([0-9]\)/\1/' $FBSRC/include/firebird/impl/blr.h >blr_tmp.h
 h2pas -i -e -o include/blr.inc blr_tmp.h
