@@ -3,12 +3,12 @@
 
 usage()
 {
-  echo "dotest.sh [-2] [-3] [-4 b1|b2] [-t <testid>] [-p <fpc version>]"
+  echo "dotest.sh [-2] [-3] [-4 b1|b2] [-5] [-t <testid>] [-p <fpc version>]"
 }
 
 BUILD=
 #Parse Parameters
-TEMP=`getopt h234db:t:f:p: "$@"`
+TEMP=`getopt h2345db:t:f:p: "$@"`
 if [ $? != 0 ] ; then echo "Terminating..." >&2 ; exit 1 ; fi
 
 eval set -- "$TEMP"
@@ -21,7 +21,9 @@ while true ; do
 
         \-3) 	FB="3.0.10"; shift 1;;
 
-        \-4) 	FB="4.0.2"; shift 1;;
+        \-4) 	FB="4.0.4"; shift 1;;
+
+	\-5)	FB="5.0.0"; shift 1;;
 
 	-d)	FB="master"; shift 1;;
 
