@@ -15,7 +15,6 @@
       <Unit1>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <TopLine Value="120"/>
         <CursorPos X="71" Y="129"/>
         <UsageCount Value="200"/>
@@ -32,7 +31,7 @@
       <Unit3>
         <Filename Value="Test4.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="63"/>
         <CursorPos X="35" Y="266"/>
         <UsageCount Value="200"/>
@@ -151,7 +150,7 @@
       <Unit18>
         <Filename Value="Test18.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="261"/>
         <CursorPos X="15" Y="281"/>
         <UsageCount Value="200"/>
@@ -276,9 +275,9 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="109"/>
-        <CursorPos X="9" Y="829"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="374"/>
+        <CursorPos Y="387"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -286,6 +285,7 @@
           <CursorPos Y="403"/>
         </ExtraEditor1>
         <UsageCount Value="100"/>
+        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
@@ -316,10 +316,11 @@
       </Unit36>
       <Unit37>
         <Filename Value="../client/FBStatement.pas"/>
-        <EditorIndex Value="-1"/>
+        <EditorIndex Value="1"/>
         <TopLine Value="99"/>
         <CursorPos Y="109"/>
-        <UsageCount Value="41"/>
+        <UsageCount Value="42"/>
+        <Loaded Value="True"/>
       </Unit37>
       <Unit38>
         <Filename Value="/usr/share/fpcsrc/rtl/unix/dl.pp"/>
@@ -439,9 +440,9 @@
       </Unit53>
       <Unit54>
         <Filename Value="../client/3.0/FB30Statement.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1530"/>
-        <CursorPos X="20" Y="1553"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="942"/>
+        <CursorPos X="23" Y="957"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -449,6 +450,7 @@
           <CursorPos X="42" Y="950"/>
         </ExtraEditor1>
         <UsageCount Value="100"/>
+        <Loaded Value="True"/>
       </Unit54>
       <Unit55>
         <Filename Value="../client/2.5/FB25Statement.pas"/>
@@ -487,9 +489,10 @@
       </Unit59>
       <Unit60>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="3827"/>
-        <CursorPos X="9" Y="3845"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="1772"/>
+        <CursorPos X="25" Y="1772"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -497,6 +500,7 @@
           <CursorPos X="101" Y="5724"/>
         </ExtraEditor1>
         <UsageCount Value="100"/>
+        <Loaded Value="True"/>
       </Unit60>
       <Unit61>
         <Filename Value="../../fbintf.fb4/changelog"/>
@@ -1013,10 +1017,10 @@
       </Unit131>
       <Unit132>
         <Filename Value="../client/IB.pas"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="1447"/>
         <CursorPos X="27" Y="1470"/>
-        <UsageCount Value="69"/>
+        <UsageCount Value="70"/>
         <Loaded Value="True"/>
       </Unit132>
       <Unit133>
@@ -1334,7 +1338,7 @@
         <UsageCount Value="19"/>
       </Unit177>
     </Units>
-    <JumpHistory Count="14" HistoryIndex="13">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="Test1.pas"/>
         <Caret Line="64" Column="42" TopLine="43"/>
@@ -1391,22 +1395,81 @@
         <Filename Value="Test1.pas"/>
         <Caret Line="134" TopLine="114"/>
       </Position14>
+      <Position15>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="1540" Column="39" TopLine="1530"/>
+      </Position15>
+      <Position16>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+      </Position16>
+      <Position17>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="954" Column="70" TopLine="935"/>
+      </Position17>
+      <Position18>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="950" Column="24" TopLine="935"/>
+      </Position18>
+      <Position19>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="952" Column="49" TopLine="935"/>
+      </Position19>
+      <Position20>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="959" Column="70" TopLine="935"/>
+      </Position20>
+      <Position21>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="945" Column="14" TopLine="935"/>
+      </Position21>
+      <Position22>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="819" Column="54" TopLine="801"/>
+      </Position22>
+      <Position23>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="388" Column="13" TopLine="374"/>
+      </Position23>
+      <Position24>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="124" Column="14" TopLine="124"/>
+      </Position24>
+      <Position25>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="608" Column="34" TopLine="606"/>
+      </Position25>
+      <Position26>
+        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
+        <Caret Line="3996" Column="13" TopLine="3982"/>
+      </Position26>
+      <Position27>
+        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
+        <Caret Line="8342" TopLine="8340"/>
+      </Position27>
+      <Position28>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="608" Column="34" TopLine="606"/>
+      </Position28>
+      <Position29>
+        <Filename Value="../client/3.0/FB30Statement.pas"/>
+        <Caret Line="957" Column="23" TopLine="942"/>
+      </Position29>
     </JumpHistory>
     <RunParams>
       <FormatVersion Value="2"/>
       <Modes ActiveMode="default"/>
     </RunParams>
-    <HistoryLists Count="2">
-      <List0 Name="LaunchingApplication" Type="File" Count="3">
-        <Item1 Value="C:\Windows\system32\cmd.exe \C ${TargetCmdLine}"/>
-        <Item2 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
-        <Item3 Value="C:\Windows\system32\cmd.exe /C ${TargetCmdLine}"/>
+    <HistoryLists Count="3">
+      <List0 Name="LaunchingApplication" Type="File" Count="4">
+        <Item2 Value="C:\Windows\system32\cmd.exe \C ${TargetCmdLine}"/>
+        <Item3 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <Item4 Value="C:\Windows\system32\cmd.exe /C ${TargetCmdLine}"/>
       </List0>
       <List1 Name="CommandLineParameters" Count="20">
         <Item1 Value="-t 1"/>
-        <Item2 Value="-t 10"/>
-        <Item3 Value="-t 4"/>
-        <Item4 Value="-t 3"/>
+        <Item2 Value="-t 3"/>
+        <Item3 Value="-t 10"/>
+        <Item4 Value="-t 4"/>
         <Item5 Value="-t 2"/>
         <Item6 Value="-t 6 -X"/>
         <Item7 Value="-t 5 -X"/>
@@ -1424,6 +1487,7 @@
         <Item19 Value="-t 6"/>
         <Item20 Value="-t 16"/>
       </List1>
+      <List2 Name="WorkingDirectory" Type="File" Count="1"/>
     </HistoryLists>
   </ProjectSession>
 </CONFIG>
