@@ -25,6 +25,10 @@ FBINTF Change Log  version          (1.4-2 Build 14340) Wed, 20 Mar 2024 11:13:1
 6. ISDL interface moved from FB30Array to IB. This is to avoid internal FPC compiler errors
    consequential on the use of generics across units.
 
+7. Internal changes necessary to correctly compile and run with FPC 3.3.1 and later.
+
+8. Firebird 5 support tested.
+
 FBINTF Change Log  version          (1.4-1 Build 14103) Mon, 27 Nov 2023 14:26:35 +0000
 
 1. FBSQLData: ensure that TResults.getSQLData and TResults.GetData use same error
